gem2deb (0.30.2) UNRELEASED; urgency=medium

  [ Antonio Terceiro ]
  * dh-make-ruby:
    - replace mentions of `apt-file update` with `apt update`, following new
      version of apt-file
  * gem2deb-test-runner:
    - make it explicit in the manpage that are options other than
      --autopkgtest

  [ Christian Hofstaedtler ]
  * Move build-essential to Recommends, easing cross-builds.
  * Move python3-debian to Recommends, easing cross-builds (only needed
    for tests).
  * Make packages Architecture: any to satisfy arch-correct Build-Depends
    for cross-builds.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 25 Mar 2016 10:46:45 -0300

gem2deb (0.30.1) unstable; urgency=medium

  * Gem2Deb::Metadata:
    - make the workaround attempt for gemspecs using git more robust.
  * Gem2Deb::Banner:
    - flush stdout immediately to improve output under autopkgtest

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 17 Mar 2016 11:42:36 -0300

gem2deb (0.30) unstable; urgency=medium

  * Gem2Deb::Metadata:
    - workaround git usage in gemspecs. The fact that Debian source packages
      are *not* git repositories makes it necessary to patch upstream gemspec to
      drop usage of `git ls-files` in several packages. This change makes
      gem2deb try to override that with sane defaults for a Debian package.
      (Closes: #800933)
    - fail the build if there is a gemspec in the source package but we fail
      to load it.
  * gem2deb-test-runner: when dependency resolution is requested, fail if
    there is no working source gemspec to read the package name from.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 15 Mar 2016 13:04:26 -0300

gem2deb (0.29) unstable; urgency=medium

  * gem2tgz:
    - Stop generating metadata.yml, and generate a .gemspec if there is no
      gemspec yet.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 04 Mar 2016 18:50:17 -0300

gem2deb (0.28) unstable; urgency=medium

  * dh_ruby: