@@ -7,6 +7,7 @@ gem2deb (0.30.2) UNRELEASED; urgency=medium
   * gem2deb-test-runner:
     - make it explicit in the manpage that are options other than
       --autopkgtest
+  * gem2deb/extension_builder.rb: make sure rake is called as /usr/bin/rake
 
   [ Christian Hofstaedtler ]
   * Move build-essential to Recommends, easing cross-builds.
